* Changes in wtmpclean ? -- Davide Madrisan (?)
- Modularize the source code:
  new files: src/wtmpedit.c, src/wtmpxdump.c, and src/wtmpxrawdump.c
- Rework the documentation files.
- Portability enhancements on operating systems that do not provide 'utmpx.h'.
- Remove unnecessary files.

* Changes in wtmpclean 0.8.0 -- Davide Madrisan (Dec 10 2013)
- New output format for date and time in the raw dump mode.
- Use the same output for date and time in both raw dump and edit mode.
  (usability issue pointed out by Sebastian Thomas. Thanks!)
- Add support for regular expressions in the editing mode.
- Update the help message. 
- Unify the error messages by using a single function: 'die()'.
- configure.ac: remove the obsolescent macro AC_HEADER_STDC
- Reindent the code to use the formatting style consistently.

* Changes in wtmpclean 0.6.7 -- Davide Madrisan (Nov 06 2009)
- Add ltype to utmpxlist structure.
- wtmpxdump(): parse RUN_LVL records to find for system reboots and halts
- Display "down" as logout time for all processes terminated by a system reboot/halt.
- dumprecord(): correctly display login times with negative values.

* Changes in wtmpclean 0.6.6 -- Davide Madrisan (Oct 29 2009)
- The ut_id, and ut_addr_v6 fields are also filled up with null bytes when removing an entry.
- The C locale is now used via setlocale precautionally.
- Fixed the gcc warnings shown by '-Wall -Wextra'.
- Better output in listening mode.
- Made the variables of type local when possible.

* Changes in wtmpclean 0.6.5 -- Davide Madrisan (Jan 15 2009)
- wtmpxlist() has been renamed to wtmpxdump().
- wtmpxdump(): Raw output highly improved.
- wtmpxdump(): Dump all the db if no user is specified.
- Always enable the `--raw' option (its code was previously in DEBUG blocks).
- Return `1' if wtmpedit() fails.
- Do not accept unknown fake users when patching the wtmp db.
- Remove the option `--preserve': always preserve timestamps.