@@ -4,6 +4,7 @@
 - Rework the documentation files.
 - Portability enhancements on operating systems that do not provide 'utmpx.h'.
 - Remove unnecessary files.
+" New function 'mybasename'.
 
 * Changes in wtmpclean 0.8.0 -- Davide Madrisan (Dec 10 2013)
 - New output format for date and time in the raw dump mode.
